css/partners.css
.partner-panel {
  color: #28377C;
}
.partner-panel .row.second {
  padding-top: 20px;
}

.partner-title {
  color: #28377C;
}

#last_partner {
  padding-bottom: 40px;
}

.sponsor-img {
  height: 100px;
  padding-right: 30px;
  padding-top: 10px;
  -webkit-filter: grayscale(1);
  -webkit-transition: .3s all ease-in;
}

.donor-panel {
  padding-bottom: 30px;
}

.donor-text {
  text-align: center;
  color: #58585B;
  font-family: Georgia; 
  font-style: italic;
  font-weight: 100;
}

.donor_name {
  padding-bottom: 5px;
}

.sponsor-img-row2 {
  height: 92px;
}

.sponsor-img:hover {
  -webkit-filter: grayscale(0);
}

#last_sponsor {
  padding-bottom: 30px;
}

.sponsor-panel {
  background-color: white;
  color: #28377C;
  font-family: Georgia;
  font-style: italic;
  text-align: center;
  margin: 0 auto;
  padding-bottom: 30px;
}

.sponsor-panel .row.second {
  padding-bottom: 40px;
}

.partner-text {
  color: #58585B;
  font-family: arial;
  font-size: 75%;
  line-height: 140%;
  padding-top: 7px;
}

.partner-subtitle {
  color: #28377C;
}

.mission-panel {
  background-color: #28377C;
  padding-top: 40px;
  padding-bottom: 40px;
}

.mission-statement{
  color: #dce3e7;
  font-family: Georgia;
  font-style: italic;
  text-align: center;
  font-size: 135%;
  line-height: 120%;
  margin-left: auto;
  margin-right: auto;
}

.donor-thank-panel {
  background-color: #28377C;
  padding-top: 20px;
  padding-bottom: 20px;
}

.donor-thank-statement{
  color: #e6e7e8;
  font-family: Georgia;
  font-style: italic;
  text-align: center;
  line-height: 120%;
  font-size: 120%;
  font-weight: 100;
  margin-left: auto;
  margin-right: auto;
}

.how-text {
  color: #58585B;
  font-family: arial;
  font-size: 75%;
  line-height: 140%;
  padding-top: 7px;
  text-align: center;
}

.how-panel {
  padding-bottom: 40px;
}

